Crawling Successful with depth
Only have to implement operation for passing argument