@@ -55,19 +55,28 @@ public class WebCrawler {
 	public static DB db = new DB();
 	static ArrayList<tempData> storedLinks = new ArrayList<tempData>();
 	static String masterURL = "https://www.calstatela.edu";
+	static String saveDir = "C:/path";
+
 	static FileWriter fileJSON;
 
 	public static void main(String[] args) throws Exception {
-		storedLinks.add(new tempData(masterURL, 0, false, true));
 
+	
 		fileJSON = new FileWriter("metadata.json");
 		WebCrawler p = new WebCrawler();
-		// db.runSql2("TRUNCATE Record;");
-		p.CRAWL_Recursive(1);
-		// p.BFS(masterURL);
-		WebCrawler.fileJSON.close();
+		storedLinks.add(new tempData(masterURL, 0, false, true));
+		try {
+			HttpDownloadUtility.downloadFile(masterURL, saveDir);
+		} catch (Exception ex) {
+			// ex.printStackTrace();
+		}
 
-		// fileJSON.close();
+		
+		p.CRAWL_Recursive(1);
+		
+		WebCrawler.fileJSON.close();
+		
+		// p.BFS(masterURL);
 
 	}
 
@@ -93,96 +102,84 @@ public class WebCrawler {
 		if (check == true) {
 			return;
 		}
-		// String urlPath = null;
-		// int urlDepth = 0;
+
 		System.out.println("-------");
 		int var = 0;
-		/*for (tempData tempData : storedLinks) {
+
+		for (tempData tempData : storedLinks) {
 
 			System.out.println(var + " At Depth" + tempData.getDepth() + " "
 					+ tempData.getUrl());
 			var++;
-		}*/
+		}
 
 		System.out.println();
-	
+
 		for (int i = 0; i < storedLinks.size(); i++) {
-			/*
-			System.out.println( storedLinks.get(i).getUrl() + " ON " + storedLinks.get(i).getDepth() + " "  + storedLinks.get(i).isCrawled() );
-			*/
+
 			if ((storedLinks.get(i).isCrawled() == false)/* && (i <= d) */) {
 				this.urlPath = storedLinks.get(i).getUrl();
 				this.urlDepth = storedLinks.get(i).getDepth();
 				this.urlSameDomain = storedLinks.get(i).isSameDomain();
-				/*
-				 * if (!(urlPath.equals(masterURL))) { if (urlDepth == 0) {
-				 * this.urlDepth = 1; }
-				 * 
-				 * }
-				 */
-			storedLinks.set(i, new tempData(urlPath, urlDepth, true,
+
+				storedLinks.set(i, new tempData(urlPath, urlDepth, true,
 						urlSameDomain));
 				break;
 			}
 
 		}
-		System.out.println(" Parent" + urlPath + " ------- " + urlDepth);
-		String fileURL = urlPath;
-		String saveDir = "C:/path";
-		/*if (urlDepth <= d) {*/
-			URL url;
-			try {
-				url = new URL(urlPath);
-				URI uri = new URI(masterURL);
-				String domain = uri.getHost();
-				System.out.println(domain + "Domain Name");
+		System.out.println("Parent " + urlPath + " ------- " + urlDepth);
+		
+		URL url;
+		try {
+			url = new URL(urlPath);
+			URI uri = new URI(masterURL);
+			String domain = uri.getHost();
+			System.out.println(domain + "Domain Name");
 
-				// InputStream input = url.openStream();
-				// In adverse sittuation, uncomment upper line and delete below
-				// till
-				// checkpt1 - implemented to remove IOEXception - nirav
-				URLConnection uc;
-				StringBuilder parsedContentFromUrl = new StringBuilder();
-				uc = url.openConnection();
-				uc.connect();
+			// InputStream input = url.openStream();
+			// In adverse sittuation, uncomment upper line and delete below
+			// till
+			// checkpt1 - implemented to remove IOEXception - nirav
+			URLConnection uc;
+			StringBuilder parsedContentFromUrl = new StringBuilder();
+			uc = url.openConnection();
+			uc.connect();
 
-				uc = url.openConnection();
-				uc.addRequestProperty("User-Agent",
-						"Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.0)");
-				uc.connect();
+			uc = url.openConnection();
+			uc.addRequestProperty("User-Agent",
+					"Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.0)");
+			uc.connect();
 
-				BufferedInputStream input = new BufferedInputStream(
-						uc.getInputStream());
+			BufferedInputStream input = new BufferedInputStream(
+					uc.getInputStream());
 
-				// *** checkpt1
+			// *** checkpt1
 
-				LinkContentHandler linkhandler = new LinkContentHandler();
-				ContentHandler text = new BodyContentHandler();
-				ToHTMLContentHandler toHTMLHandler = new ToHTMLContentHandler();
+			LinkContentHandler linkhandler = new LinkContentHandler();
+			ContentHandler text = new BodyContentHandler();
+			ToHTMLContentHandler toHTMLHandler = new ToHTMLContentHandler();
 
-				TeeContentHandler teeHandler = new TeeContentHandler(
-						linkhandler, text, toHTMLHandler);
+			TeeContentHandler teeHandler = new TeeContentHandler(linkhandler,
+					text, toHTMLHandler);
 
-				Metadata metadata = new Metadata();
-				ParseContext parsecontext = new ParseContext();
-				AutoDetectParser parser = new AutoDetectParser();
-				parser.parse(input, teeHandler, metadata, parsecontext);
+			Metadata metadata = new Metadata();
+			ParseContext parsecontext = new ParseContext();
+			AutoDetectParser parser = new AutoDetectParser();
+			parser.parse(input, teeHandler, metadata, parsecontext);
 
-				urlDepth = urlDepth + 1;
+			urlDepth = urlDepth + 1;
 
-				for (Link name : linkhandler.getLinks()) {
-					int curDepth = urlDepth;
+			for (Link name : linkhandler.getLinks()) {
+				int curDepth = urlDepth;
 
-					String curLink = name.getUri();
-					
-					forEachCrawledLinks(curLink, domain, d, curDepth,
-							urlSameDomain);
-				}
-			} catch (Exception e) {
-
+				String curLink = name.getUri();
+				forEachCrawledLinks(curLink, domain, d, curDepth, urlSameDomain);
 			}
+		} catch (Exception e) {
 
-		/*}*/
+		}
+
 		CRAWL_Recursive(d);
 
 	}
@@ -202,14 +199,14 @@ public class WebCrawler {
 			}
 
 		}
+
 		if (curLink.endsWith("/")) {
 			curLink = curLink.substring(0, curLink.length() - 1);
 		}
 
 		URI newUri = new URI(curLink);
 		String newDomain = newUri.getHost();
-	/*	System.out.println(curLink + " " + newDomain + "newDomain Name");
-*/
+
 		if (urlSameDomain == true) {
 
 			if (newDomain.equals(domain)) {
@@ -223,40 +220,38 @@ public class WebCrawler {
 		} else {
 			isCurSameDomain = false;
 		}
-
-		if (curDepth <= d) {
-			boolean isPresent = true;
-			for (tempData temp : storedLinks) {
-				if (!(curLink.equals(temp.getUrl()))) {
-					isPresent = false;
-				} else {
-					isPresent = true;
-					break;
-				}
+		boolean isPresent = true;
+		for (tempData temp : storedLinks) {
+			if (!(curLink.equals(temp.getUrl()))) {
+				isPresent = false;
+			} else {
+				isPresent = true;
+				break;
 			}
-
-			/*
-			 * boolean isPresent = true; for (tempData temp : storedLinks) { if
-			 * (!(curLink.equals(temp.getUrl()))) { isPresent = false; } else {
-			 * isPresent = true; break; }
-			 */
-			
-			System.out.println(curLink + " ON " + curDepth);
-			
-			if (isPresent == false) {
-
-				if ((isCurSameDomain == true)
-						|| (isCurSameDomain == false && curDepth <= d)) {
-					storedLinks.add(new tempData(curLink, curDepth, false,
-							isCurSameDomain));
-				}
-
-			}
-			/*
-			 * if (!(storedLinks.contains(curLink))) { storedLinks.add(new
-			 * tempData(curLink, curDepth, false)); }
-			 */
 		}
+
+		System.out.println(curLink + " WAS LINK AND  " + curDepth + isPresent);
+
+		if (isPresent == false) {
+
+			if ((isCurSameDomain == true)
+					|| (isCurSameDomain == false && curDepth <= d)) {
+
+				storedLinks.add(new tempData(curLink, curDepth, false,
+						isCurSameDomain));
+				try {
+					HttpDownloadUtility.downloadFile(curLink, saveDir);
+				} catch (Exception ex) {
+					// ex.printStackTrace();
+				}
+
+				return;
+			} else {
+				System.out.println("Error");
+			}
+
+		}
+
 	}
 
 	public void BFS(String path) throws IOException, SAXException,
